2013-01-04  Dan Bernstein  <mitz@apple.com>

        [mac] WebKit1 has no equivalent of WKBundleNodeHandleCopyHTMLTableCellElementCellAbove
        https://bugs.webkit.org/show_bug.cgi?id=106121

        Reviewed by Adele Peterson.

        Added test for -[DOMTHMLTableCellElement _cellAbove].

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/mac/DOMHTMLTableCellCellAbove.mm: Added.
        (-[HTMLTableCellElementCellAboveTest webView:didFinishLoadForFrame:]):
        (TestWebKitAPI):
        (TestWebKitAPI::expectCellAboveCell):
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/mac/DOMHTMLTableCellElementCellAbove.html: Added.

2013-01-04  Eric Seidel  <eric@webkit.org>

        FlakyTestReporter should be re-enabled and taught how to post patches
        https://bugs.webkit.org/show_bug.cgi?id=103839

        Reviewed by Adam Barth.

        This moves LayoutTestResultsReader off of the DeprecatedPort object.
        It also adds a real Port object to the EWS and CommitQueue objects
        using a new PatchProcessingQueue superclass.
        PatchProcessingQueue doesn't seem to be the cleanest insertion point
        but works for this purpose.
        I also moved _upload_results_archive_for_patch into PatchProcessingQueue
        to resolve a FIXME.

        This required some hacks/shiming between the non-specific "old"
        port names which the EWS system is currently using, and the new
        port objects.  This shimming is done in PatchProcessingQueue._new_port_name_from_old.

        Hopefully this will fix the flaky test reporter and results uploading.
        Certainly it's another small step towards getting rid of the old ports.py
        infrastructure and making the NRWT Port class common webkitpy infrastructure.

        Now that DeprecatedPort is no longer used for the results directory
        I removed all the explicit results-dir code which webkit-patch was using